Added Fire Spawn Cage. Improve Vizier combat a bit.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -337,6 +337,7 @@
 
   "item.goety.brain": "Brain",
   "item.goety.soul_transfer": "Transfer Gem",
+  "item.goety.flame_capture": "Fire Spawn Cage",
   "item.goety.empty_ill_cage": "Empty Ill Cage",
   "item.goety.filled_ill_cage": "Filled Ill Cage",
   "item.goety.haunted_boat": "Haunted Boat",
