Fixed the long time Creative Server Bug! :D

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -142,6 +142,7 @@
   "entity.goety.soul_burning_ground":"Soul Burning Ground",
   "entity.goety.poison_ground":"Murky Ground",
   "entity.goety.stormutil":"Thunderstorm",
+  "entity.goety.remove_infamy_util":"Infamy Removal",
   "entity.goety.summon_circle":"Summoning Circle",
   "entity.goety.summon_apostle":"Apostle",
 
