Retextured some Remnant Blocks, added Dark Master Robes.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -101,7 +101,6 @@
   "entity.goety.scorch":"Scorch",
   "entity.goety.skull_lord":"Skull Lord",
   "entity.goety.bone_lord":"Bone Lord",
-  "entity.goety.sentinel":"Sentinel",
 
   "entity.goety.boat":"Boat",
 
@@ -178,7 +177,6 @@
   "item.goety.vizier_spawn_egg": "Vizier Spawn Egg",
   "item.goety.irk_spawn_egg": "Irk Spawn Egg",
   "item.goety.scorch_spawn_egg": "Scorch Spawn Egg",
-  "item.goety.sentinel_spawn_egg": "Sentinel Spawn Egg",
   "item.goety.zombie_minion_spawn_egg": "Zombie Servant Spawn Egg",
   "item.goety.husk_minion_spawn_egg": "Husk Servant Spawn Egg",
   "item.goety.drowned_minion_spawn_egg": "Drowned Servant Spawn Egg",
@@ -214,6 +212,9 @@
   "item.goety.darkarmoredhelm": "Dark Battle Helm",
   "item.goety.darkarmoredrobe": "Dark Battle Robe",
   "item.goety.darkarmoredleggings": "Dark Battle Leggings",
+  "item.goety.darkmasterhelm": "Dark Master Helm",
+  "item.goety.darkmasterrobe": "Dark Master Robe",
+  "item.goety.darkmasterleggings": "Dark Master Leggings",
   "item.goety.necrohelm": "Necro Helm",
   "item.goety.necrorobe": "Necro Robe",
   "item.goety.necrobootsofwander": "Necro Boots of Wander",
@@ -333,6 +334,7 @@
 
   "item.goety.emerald_amulet": "Emerald Amulet",
   "item.goety.star_amulet": "Soul Shield Amulet",
+  "item.goety.pendant_of_hunger": "Pendant of Hunger",
   "item.goety.ring_of_want": "Ring of Want",
   "item.goety.grave_glove": "Grave Gloves",
 
@@ -564,6 +566,7 @@
   "info.goety.items.rottreant.robe": "You must wear Fel Robes!",
   "info.goety.items.rottreant.souls": "You must have %s amount of Soul Energy!",
   "info.goety.items.forbidden_scroll": "\u00A75The Secrets to Immortality...\u00A75",
+  "info.goety.hunger_pendent.amount": "§2Rotten Flesh:§2 %d",
   "info.goety.infamy.amount": "You have %d Infamy amongst the Illagers",
   "info.goety.research.nether": "You have transcribed the book of the Cultists!",
   "info.goety.research.lich": "You have learned the secret to Immortality!",
@@ -802,6 +805,22 @@
   "advancements.goety.craftvexingfocus.description": "Look out for any Hermits outside of your windows.",
   "advancements.goety.craftbitingfocus.title": "The Floor Is Jaws",
   "advancements.goety.craftbitingfocus.description": "Perhaps it can be improved later on...",
+  "advancements.goety.craft_all_focus.title": "Hyperfocus",
+  "advancements.goety.craft_all_focus.description": "Geez, that's a lotta Focuses!",
+  "advancements.goety.craft_dark_altar.title": "Ran Out of Essentia",
+  "advancements.goety.craft_dark_altar.description": "Place the Dark Altar onto a Cursed Cage with a Totem of Souls in it.",
+  "advancements.goety.craft_dead_sand.title": "The Tale of the Sands",
+  "advancements.goety.craft_dead_sand.description": "Careful on where you place these infectious sands...",
+  "advancements.goety.craft_grave_gloves.title": "Proper Handling",
+  "advancements.goety.craft_grave_gloves.description": "Increases Attack Speed of Scythes.",
+  "advancements.goety.craft_dark_scythe.title": "Slice and Dice",
+  "advancements.goety.craft_dark_scythe.description": "Grants Soul Energy with each hit. Attack Speed increases if not holding anything offhand.",
+  "advancements.goety.craft_star_amulet.title": "Anti-Pincushion",
+  "advancements.goety.craft_star_amulet.description": "Protects wearer from arrows when under half the max health.",
+  "advancements.goety.craft_ring_of_want.title": "My Precious",
+  "advancements.goety.craft_ring_of_want.description": "Increases Loot Drop from Mobs when killed using Spells or Summons. Must be enchanted first.",
+  "advancements.goety.craft_arca.title": "Remote Connection",
+  "advancements.goety.craft_arca.description": "The Arca stores and distributes your Soul Energy without a need of a Totem of Souls.",
   "advancements.goety.kill_a_cultist.title": "You're An Ant Beneath My Boot!",
   "advancements.goety.kill_a_cultist.description": "Nether Worship is hot nowadays.",
   "advancements.goety.kill_cultists.title": "And You'll Always Will Be!",
@@ -812,6 +831,10 @@
   "advancements.goety.kill_illagers.description": "Defeated an Envioker, an Inquillager and a Conquillager!",
   "advancements.goety.kill_apostle.title": "Trumpeter's Shadow",
   "advancements.goety.kill_apostle.description": "Defeated an Apostle, the Pale Faced envoy of the Nether.",
+  "advancements.goety.craft_philosophers_mace.title": "Midas Touch",
+  "advancements.goety.craft_philosophers_mace.description": "Can break almost any block and causes Mobs to drop Gold Nuggets.",
+  "advancements.goety.craft_death_scythe.title": "Grim Reaper",
+  "advancements.goety.craft_death_scythe.description": "At full power, can let loose a projectile that slashes everything in its vicinity.",
   "advancements.goety.kill_skull_lord.title": "Doom Raider",
   "advancements.goety.kill_skull_lord.description": "Defeated a Skull Lord, the ancient lord of the Fort.",
   "advancements.goety.kill_vizier.title": "Arubian Nights",
@@ -867,6 +890,7 @@
   "jei.goety.craftType.sabbath": "Ritual Type: Sabbath",
   "jei.goety.craftType.air": "Ritual Type: Air",
   "jei.goety.craftType.storm": "Ritual Type: Storm",
+  "jei.goety.craftType.end": "Ritual Type: End",
   "jei.goety.soulCost": "Soul Cost/s: %s",
   "jei.goety.duration": "Duration: %s sec",
   "jei.goety.error.missing_id": "Cannot identify recipe.",
