Add changes to Apostle, Malghast and Ice Chunk from Goety 2.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -8,7 +8,7 @@
   "name.goety.apostle.6" : "Ur-Tsar",
   "name.goety.apostle.7" : "Khormack",
   "name.goety.apostle.8" : "Gan'Dak",
-  "name.goety.apostle.9" : "Malghash",
+  "name.goety.apostle.9" : "Armon",
   "name.goety.apostle.10" : "Baal Zephon",
   "name.goety.apostle.11" : "Vexx Mock",
   "name.goety.apostle.12" : "Krozen",
