Added some configs and trying to implement some stuff.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -590,7 +590,15 @@
   "info.goety.research.nether": "You have transcribed the book of the Cultists!",
   "info.goety.research.lich": "You have learned the secret to Immortality!",
   "info.goety.ritual.fail": "You do not know how to properly start this ritual!",
-  "info.goety.ritual.structure.fail": "Inefficient Requirements!",
+  "info.goety.ritual.structure.fail": "Inefficient Block Requirements!",
+  "info.goety.ritual.convert.fail": "Required Mob Not In Range!",
+  "info.goety.ritual.tooManyItems.fail": "Too many Items on Pedestals within Vicinity!",
+  "info.goety.ritual.tooLittleItems.fail": "Missing essential Items!",
+  "info.goety.ritual.wrongItems.fail": "Certain Items aren't part of the Requirements!",
+  "info.goety.ritual.cannotConsume.fail": "Cannot consume Item!",
+  "info.goety.ritual.notCatalyst.fail": "Item is not Ritual Catalyst!",
+  "info.goety.ritual.noSouls.fail": "Not enough Soul Energy!",
+  "info.goety.ritual.itemProblem.fail": "Missing or Incorrect Items",
   "info.goety.minion.wander": "%s is now Wandering",
   "info.goety.minion.staying": "%s is now Standing By",
   "info.goety.minion.follow": "%s is now Following",
@@ -904,6 +912,8 @@
 
   "jei.goety.sacrifice": "Sacrifice: %s",
   "jei.goety.summon": "Summon: %s",
+  "jei.goety.convert": "Required Entity: %s",
+  "jei.goety.convertInto": "Convert Into: %s",
   "jei.goety.item_to_use": "Item to use:",
   "jei.goety.craftType.null": "Ritual Type: Empty",
   "jei.goety.craftType.animalis": "Ritual Type: Animalis",
